--- a/design-gallery.html
+++ b/design-gallery.html
@@ -355,7 +355,32 @@
 </div> -->
 <!-- Feature End -->
 
-
+<section class="videos pb-2" style="background-color: white">
+    <h2 class="work-videos text-center mb-4 section-title" 
+        >
+      Our Work Videos
+    </h2>
+    <div class="container">
+      <div class="video1 video">
+        <video controls="" muted="">
+          <source src="/img/Video4.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </div>
+      <div class="video2 video">
+        <video controls="" muted="">
+          <source src="/img/video5.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </div>
+      <div class="video2 video">
+        <video controls="" muted="">
+          <source src="/img/Video6.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </div>
+    </div>
+  </section>
    
         
 
