--- a/modular-kitchen.html
+++ b/modular-kitchen.html
@@ -110,7 +110,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header3 py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <h1 class="display-1 text-white animated slideInDown">Modular-kitchen</h1>
             <nav aria-label="breadcrumb animated slideInDown">
@@ -182,8 +182,8 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="feature-img" style="height: 800px !important;">
-                        <img class="img-fluid" src="img/carousel-2.jpg" alt="">
-                        <img class="img-fluid" src="img/s8.JPEG" alt="">
+                        <img class="img-fluid" src="img/k5.jpg" alt="">
+                        <img class="img-fluid" src="img/k4.png" alt="">
                     </div>
                 </div>
             </div>
