--- a/wardrobe.html
+++ b/wardrobe.html
@@ -166,7 +166,7 @@
 
     <!-- Page Header Start -->
     <div
-      class="container-fluid page-header py-5 mb-5 wow fadeIn"
+      class="container-fluid page-header4 py-5 mb-5 wow fadeIn"
       data-wow-delay="0.1s"
     >
       <div class="container py-5">
@@ -255,7 +255,7 @@
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="feature-img" style="height: 800px !important">
               <img class="img-fluid" src="img/carousel-2.jpg" alt="" />
-              <img class="img-fluid" src="img/s8.JPEG" alt="" />
+              <img class="img-fluid" src="img/b3.png" alt="" />
             </div>
           </div>
         </div>
