--- a/appointment.html
+++ b/appointment.html
@@ -124,14 +124,14 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h4 class="section-title">Appointment</h4>
-                    <h1 class="display-5 mb-4">Let's discuss about your interior</h1>
+                    <h1 class="display-5 mb-4">Let's discuss about our interior</h1>
                     <p class="mb-4">Even the all-powerful Pointing has no control about the
                         blindtexts it is an almost unorthographic.</p>
                     <div class="row g-4">
                         <div class="col-12">
                             <div class="d-flex">
                                 <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-light" style="width: 65px; height: 65px;">
-                                    <i class="fa fa-2x fa-phone-alt text-primary"></i>
+                                    <i class="fa fa-2x fa-phone-alt text-white"></i>
                                 </div>
                                 <div class="ms-4">
                                     <p class="mb-2">Call Us Now</p>
@@ -142,7 +142,7 @@
                         <div class="col-12">
                             <div class="d-flex">
                                 <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-light" style="width: 65px; height: 65px;">
-                                    <i class="fa fa-2x fa-envelope-open text-primary"></i>
+                                    <i class="fa fa-2x fa-envelope-open text-white"></i>
                                 </div>
                                 <div class="ms-4">
                                     <p class="mb-2">Mail Us Now</p>
