--- a/bedroom.html
+++ b/bedroom.html
@@ -122,7 +122,7 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h4 class="section-title"> Live Life King Size!</h4>
+                    <h4 class="section-title">Go Beyond Your Wildest Dreams!</h4>
                     <h1 class="display-5 mb-4"> Modern Bedroom Designing</h1>
                     <p class="mb-2">
                         People say it doesn’t matter how a bedroom looks like because you anyway go there to just sleep. But, we don’t think so. We believe that a bedroom is a private space. And private spaces should be designed the way you want.</p>
