--- a/living-room.html
+++ b/living-room.html
@@ -125,8 +125,8 @@
                     <h4 class="section-title"> Live Life King Size!</h4>
                     <h1 class="display-5 mb-4">Living Room Designing</h1>
                     <p class="mb-2">
-                        "Transform your living space into a haven of comfort and style with Ochron Interior's expert touch. Elevate every corner with timeless elegance and personalized design, where luxury meets functionality seamlessly."</p>
-                    <p class="mb-4">Orchron works on:</p>
+                        Transform your living space into a haven of comfort and style with Ochron Interior's expert touch. Elevate every corner with timeless elegance and personalized design, where luxury meets functionality seamlessly.</p>
+                    <p class="mb-4">Ochron works on:</p>
                         <div class="row g-4">
                         <div class="col-12">
                             <div class="d-flex align-items-start">
@@ -178,7 +178,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="feature-img" style="height: 800px !important;">
                         <img class="img-fluid" src="img/carousel-2.jpg" alt="">
-                        <img class="img-fluid" src="img/s8.JPEG" alt="">
+                        <img class="img-fluid" src="img/carousal-4.jpg" alt="">
                     </div>
                 </div>
             </div>
