--- a/modular-kitchen.html
+++ b/modular-kitchen.html
@@ -130,12 +130,10 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h4 class="section-title"> Live Life King Size!</h4>
+                    <h4 class="section-title"> Never Entered Your Kitchen? You Will, Now!</h4>
                     <h1 class="display-5 mb-4">Modular-kitchen Designing</h1>
                     <p class="mb-2">
-                        "Transform your living space into a haven of comfort and style with Ochron Interior's expert
-                        touch. Elevate every corner with timeless elegance and personalized design, where luxury meets
-                        functionality seamlessly."</p>
+                        A kitchen is no more just a cooking space. Lives have become busier. People tend to spend time in more ways than before. Experience the joy of just chit-chatting with your loved ones over a cup of coffee on the breakfast counter.</p>
                     <p class="mb-4">Orchron works on:</p>
                     <div class="row g-4">
                         <div class="col-12">
