--- a/service.html
+++ b/service.html
@@ -108,8 +108,8 @@
             <h1 class="display-1 text-white animated slideInDown">Services</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase mb-0">
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="index.html">Home</a></li>
+                  
                     <li class="breadcrumb-item text-primary active" aria-current="page">Services</li>
                 </ol>
             </nav>
@@ -119,16 +119,19 @@
 
 
     <!-- Facts Start -->
-    <div class="container-xxl py-5">
+    <div class="container-xxl py-5 our">
         <div class="container pt-5">
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="fact-item text-center bg-light h-100 p-5 pt-0">
                         <div class="fact-icon">
+                            <!-- <i class="fa-light fa-clock"></i> -->
                             <img src="img/icons/icon-2.png" alt="Icon">
                         </div>
                         <h3 class="mb-3">Design Approach</h3>
-                        <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                        <p class="mb-0">"Approach embraces a harmonious fusion of functionality, creativity, and
+                            personalization to craft spaces that resonate with individuality and inspire every
+                            inhabitant."</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -137,7 +140,8 @@
                             <img src="img/icons/icon-3.png" alt="Icon">
                         </div>
                         <h3 class="mb-3">Innovative Solutions</h3>
-                        <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                        <p class="mb-0">"Redefine traditional boundaries, infusing spaces with fresh perspectives and
+                            transformative designs that captivate the imagination."</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -146,7 +150,8 @@
                             <img src="img/icons/icon-4.png" alt="Icon">
                         </div>
                         <h3 class="mb-3">Project Management</h3>
-                        <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                        <p class="mb-0">"Ensures seamless execution, from conception to completion, delivering tailored
+                            interiors that exceed expectations."</p>
                     </div>
                 </div>
             </div>
@@ -156,76 +161,85 @@
 
 
     <!-- Service Start -->
-    <div class="container-xxl py-5">
+    <div class="container-xxl py-5 services">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <h4 class="section-title">Our Services</h4>
-                <h1 class="display-5 mb-4">We Focused On Modern Architecture And Interior Design</h1>
+                <h1 class="display-5 mb-4">We Focused On Modern Interior Design</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/service-1.jpg" alt="">
+                        <img class="bg-img" src="img/s1.jpg" alt="">
                         <div class="service-text p-5">
-                            <img class="mb-4" src="img/icons/icon-5.png" alt="Icon">
-                            <h3 class="mb-3">Architecture</h3>
-                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <img class="mb-4" src="img/living-room-interior-design-services.webp" alt="Icon">
+                            <h3 class="mb-3">
+                                Living/Dining Room</h3>
+                            <p class="mb-4">TV Unit, TV Back Panelling, Crockery Unit, Bar Unit, Bookshelf</p>
+                            <a class="btn" href="living-room.html"><i class="fa fa-plus text-primary me-3"></i>Read
+                                More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/service-2.jpg" alt="">
+                        <img class="bg-img" src="img/s2.jpg" alt="">
                         <div class="service-text p-5">
-                            <img class="mb-4" src="img/icons/icon-6.png" alt="Icon">
-                            <h3 class="mb-3">3D Animation</h3>
-                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <img class="mb-4" src="img/bedroom-interior-design-services.webp" alt="Icon">
+                            <h3 class="mb-3">Bedroom</h3>
+                            <p class="mb-4">Wardrobes, TV Unit, Bed with Storage, Dressing Unit, Study Unit</p>
+                            <a class="btn" href="bedroom.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/service-3.jpg" alt="">
+                        <img class="bg-img" src="img/s3.webp" alt="">
                         <div class="service-text p-5">
-                            <img class="mb-4" src="img/icons/icon-7.png" alt="Icon">
-                            <h3 class="mb-3">House Planning</h3>
-                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <img class="mb-4" src="img/modular-kitchen-interior-design-services.webp" alt="Icon">
+                            <h3 class="mb-3">Kitchen</h3>
+                            <p class="mb-4">Countertops, Backsplashes, Accessories, Shutters, Storage</p>
+                            <a class="btn" href="modular-kitchen.html"><i class="fa fa-plus text-primary me-3"></i>Read
+                                More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/service-4.jpg" alt="">
+                        <img class="bg-img" src="img/furniture-desk.webp" alt="">
                         <div class="service-text p-5">
-                            <img class="mb-4" src="img/icons/icon-8.png" alt="Icon">
-                            <h3 class="mb-3">Interior Design</h3>
-                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <img class="mb-4" src="img/innovative-storage-design-solutions.webp" alt="Icon">
+                            <h3 class="mb-3">
+                                Wardrobe</h3>
+                            <p class="mb-4">Janitor Unit, Skirting Drawer, Pantry Pull Out, Appliance Garage, Hidden Bar
+                                Cabinet, Magic Corner</p>
+                            <a class="btn" href="wardrobe.html"><i class="fa fa-plus text-primary me-3"></i>Read
+                                More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/service-5.jpg" alt="">
+                        <img class="bg-img" src="img/Deco.webp" alt="">
                         <div class="service-text p-5">
-                            <img class="mb-4" src="img/icons/icon-9.png" alt="Icon">
-                            <h3 class="mb-3">Renovation</h3>
-                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <img class="mb-4" src="img/interior-design-services.webp" alt="Icon">
+                            <h3 class="mb-3">Space Saving Furniture</h3>
+                            <p class="mb-4">False Ceiling, Wall Panelling, Decor Accents, Lighting, Furnishing,
+                                Appliances</p>
+                            <a class="btn" href="space-saving-furniture.html"><i
+                                    class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/service-6.jpg" alt="">
+                        <img class="bg-img" src="img/s4.jpg" alt="">
                         <div class="service-text p-5">
-                            <img class="mb-4" src="img/icons/icon-10.png" alt="Icon">
-                            <h3 class="mb-3">Construction</h3>
-                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <img class="mb-4" src="img/home-improvement-services.webp" alt="Icon">
+                            <h3 class="mb-3">Home Improvement Services</h3>
+                            <p class="mb-4">Painting, Bathroom Remodelling, Tiling, Plumbing, Electrical, Civil Work,
+                                Deep Cleaning</p>
+                            <a class="btn" href="wardrobe.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
                 </div>
