--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
                                 <h1 class="display-1 text-white animated slideInDown">Best Interior Design Services</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Let Us Work On Your Dream Together! where
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Let us work on your dream together! where
                                     creativity meets functionality to transform spaces.
 
                                 </p>
@@ -140,7 +140,7 @@
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
                                 <h1 class="display-1 text-white animated slideInDown">Best Interior Design Services</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Let Us Work On Your Dream Together! where
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Let us work on your dream together! where
                                     crafting spaces that inspire and reflect your style.</p>
                                 <a href="appointment.html" class="btn btn-primary py-3 px-5 animated slideInLeft">Book
                                     Appointment</a>
@@ -150,14 +150,32 @@
                 </div>
             </div>
             <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-3.jpg'>">
-                <img class="img-fluid" src="img/carousal-3.jpg" alt="">
+                <img class="img-fluid" src="img/carousal-5.jpg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
                                 <h1 class="display-1 text-white animated slideInDown">Best Interior Design Services</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Let Us Work On Your Dream Together! where
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Let us work on your dream together! where
+                                    shaping environments to enrich lives.</p>
+                                </p>
+                                <a href="appointment.html" class="btn btn-primary py-3 px-5 animated slideInLeft">Book
+                                    Appointment</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-3.jpg'>">
+                <img class="img-fluid" src="img/kitchenhero.jpg" alt="">
+                <div class="owl-carousel-inner">
+                    <div class="container">
+                        <div class="row justify-content-start">
+                            <div class="col-10 col-lg-8">
+                                <h1 class="display-1 text-white animated slideInDown">Best Interior Design Services</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Let us work on your dream together! where
                                     shaping environments to enrich lives.</p>
                                 </p>
                                 <a href="appointment.html" class="btn btn-primary py-3 px-5 animated slideInLeft">Book
@@ -335,7 +353,7 @@
                             <h3 class="mb-3">Home Improvement Services</h3>
                             <p class="mb-4">Painting, Bathroom Remodelling, Tiling, Plumbing, Electrical, Civil Work,
                                 Deep Cleaning</p>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <a class="btn" href="wardrobe.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
                 </div>
