--- a/contact.html
+++ b/contact.html
@@ -203,8 +203,8 @@
     <!-- Google Map Start -->
     <div class="container-xxl pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
         <iframe class="w-100 mb-n2" style="height: 450px;"
-         src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d15223.661953701501!2d78.29929727817249!3d17.463758603780658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sSecond%20Floor%2C%20AJ%20Nidhi%20Complex%2C%20opp.%20Aparna%20Cyber%20Life%20Nallagandla%2C%20Serilingampalle%20(M)%2C%20Telangana%20500019!5e0!3m2!1sen!2sin!4v1714654501353!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
+         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d487146.20770702!2d78.309017!3d17.467861!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb93469bca0527%3A0x1e513c12e5dc750a!2sOchron%20Interiors%20Private%20Limited!5e0!3m2!1sen!2sus!4v1715842809116!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     <!-- Google Map End -->
 
 
@@ -215,9 +215,6 @@
     </a>
 </div>
 
-<style>
-   
-</style>
 <!--whatsapp-->
     <!-- Footer Start -->
     <div class="container-fluid  text-body footer mt-5 pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
@@ -271,7 +268,6 @@
                         &copy; <a href="#">Ochron Interior Designing</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                         Designed By <a href="https://www.thepatternscompany.com/">Thepatternscompany</a>
                     </div>
                 </div>
