--- a/living-room.html
+++ b/living-room.html
@@ -177,8 +177,8 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="feature-img" style="height: 800px !important;">
-                        <img class="img-fluid" src="img/carousel-2.jpg" alt="">
-                        <img class="img-fluid" src="img/carousal-4.jpg" alt="">
+                        <img class="img-fluid" src="img/AnyConv.com__IMG_6705.jpg" alt="">
+                        <img class="img-fluid" src="img/AnyConv.com__IMG_2928.jpg" alt="">
                     </div>
                 </div>
             </div>
