--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="container-fluid p-0  wow fadeIn" data-wow-delay="0.1s">
         <div class="owl-carousel header-carousel position-relative">
             <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-1.jpg'>">
-                <img class="img-fluid" src="img/AnyConv.com__IMG_6711.jpg" alt="">
+                <img class="img-fluid" src="img/h1.png" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
                         <div class="row justify-content-start">
@@ -134,7 +134,7 @@
                 </div>
             </div>
             <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-2.jpg'>">
-                <img class="img-fluid" src="img/carousel-2.jpg" alt="">
+                <img class="img-fluid" src="img/h2.png" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
                         <div class="row justify-content-start">
@@ -150,7 +150,7 @@
                 </div>
             </div>
             <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-3.jpg'>">
-                <img class="img-fluid" src="img/carousal-5.jpg" alt="">
+                <img class="img-fluid" src="img/h3.png" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
                         <div class="row justify-content-start">
@@ -168,7 +168,7 @@
                 </div>
             </div>
             <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-3.jpg'>">
-                <img class="img-fluid" src="img/kitchenhero.jpg" alt="">
+                <img class="img-fluid" src="img/h4.png" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
                         <div class="row justify-content-start">
@@ -198,8 +198,8 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/ImgSlider-3.webp" alt="">
-                        <img class="img-fluid" src="img/ImgSlider-2.webp" alt="">
+                        <img class="img-fluid" src="img/ab1.png" alt="">
+                        <img class="img-fluid" src="img/ab2.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
@@ -284,7 +284,7 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/s1.jpg" alt="">
+                        <img class="bg-img" src="img/live1.png" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/living-room-interior-design-services.webp" alt="Icon">
                             <h3 class="mb-3">
@@ -297,7 +297,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/s2.jpg" alt="">
+                        <img class="bg-img" src="img/bed1.png" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/bedroom-interior-design-services.webp" alt="Icon">
                             <h3 class="mb-3">Bedroom</h3>
@@ -308,7 +308,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/s3.webp" alt="">
+                        <img class="bg-img" src="img/kit1.png" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/modular-kitchen-interior-design-services.webp" alt="Icon">
                             <h3 class="mb-3">Kitchen</h3>
@@ -320,7 +320,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/furniture-desk.webp" alt="">
+                        <img class="bg-img" src="img/drag1.png" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/innovative-storage-design-solutions.webp" alt="Icon">
                             <h3 class="mb-3">
@@ -334,7 +334,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/Deco.webp" alt="">
+                        <img class="bg-img" src="img/space1.png" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/interior-design-services.webp" alt="Icon">
                             <h3 class="mb-3">Space Saving Furniture</h3>
@@ -347,7 +347,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/s4.jpg" alt="">
+                        <img class="bg-img" src="" alt="img/top1.png">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/home-improvement-services.webp" alt="Icon">
                             <h3 class="mb-3">Home Improvement Services</h3>
@@ -405,8 +405,8 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="feature-img">
-                        <img class="img-fluid" src="img/about-2.jpg" alt="">
-                        <img class="img-fluid" src="img/about-1.jpg" alt="">
+                        <img class="img-fluid" src="img/AnyConv.com__IMG_2928.jpg" alt="">
+                        <img class="img-fluid" src="img/AnyConv.com__IMG_2920.jpg" alt="">
                     </div>
                 </div>
             </div>
