--- a/wardrobe.html
+++ b/wardrobe.html
@@ -276,63 +276,63 @@
         <div class="row g-5">
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center">
-              <img src="img/w1.JPEG" class="size_img2" />
+              <img src="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-28.jpg" class="size_img2" />
             </div>
           </div>
 
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center">
-              <img src="img/w2.png" class="size_img2" />
+              <img src="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-27.jpg" class="size_img2" />
             </div>
           </div>
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center">
-              <img src="img/w3.png" class="size_img2" />
+              <img src="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-24.jpg" class="size_img2" />
             </div>
           </div>
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center">
-              <img src="img/w4.JPEG" class="size_img2" />
+              <img src="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-19.jpg" class="size_img2" />
             </div>
           </div>
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center">
-              <img src="img/w5.jpg" class="size_img2" />
+              <img src="img/Mr-Nishanth_final-designs-PPT.jpg (1)/27e0c256b6e048e78f4d1f327484bba9BAcRR4CKKUIsmeTM-25.jpg" class="size_img2" />
             </div>
           </div>
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center">
-              <img src="img/w6.png" class="size_img2" />
+              <img src="img/Mr-Nishanth_final-designs-PPT.jpg (1)/27e0c256b6e048e78f4d1f327484bba9BAcRR4CKKUIsmeTM-30.jpg" class="size_img2" />
             </div>
           </div>
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center">
-              <img src="img/w7.png" class="size_img2" />
+              <img src="img/Mr-Abhinav-Sharma_Final-designs-PPT.jpg/a40c7f8653204f8de4b520878946cd8e3vlo19Z7B7jqV3wP-14.jpg" class="size_img2" />
             </div>
           </div>
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center">
-              <img src="img/w8.jpg" class="size_img2" />
+              <img src="img/Mr-Abhinav-Sharma_Final-designs-PPT.jpg/a40c7f8653204f8de4b520878946cd8e3vlo19Z7B7jqV3wP-21.jpg" class="size_img2" />
             </div>
           </div>
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center">
-              <img src="img/w-9.jpg" class="size_img2" />
+              <img src="img/Mr-Abhinav-Sharma_Final-designs-PPT.jpg/a40c7f8653204f8de4b520878946cd8e3vlo19Z7B7jqV3wP-27.jpg" class="size_img2" />
             </div>
           </div>
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center">
-              <img src="img/w10.jpg" class="size_img2" />
+              <img src="img/AnyConv.com__IMG_6729.jpg" class="size_img2" />
             </div>
           </div>
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center">
-              <img src="img/w-11.webp" class="size_img2" />
+              <img src="img/AnyConv.com__IMG_6730.jpg" class="size_img2" />
             </div>
           </div>
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center">
-              <img src="img/w-12.jpg" class="size_img2" />
+              <img src="img/AnyConv.com__IMG_6747.jpg" class="size_img2" />
             </div>
           </div>
         </div>
