--- a/modular-kitchen.html
+++ b/modular-kitchen.html
@@ -199,7 +199,7 @@
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center">
-                        <img src="img/k1.png" class="size_img2" />
+                        <img src="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-32.jpg" class="size_img2" />
 
 
                     </div>
@@ -208,7 +208,7 @@
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center">
-                        <img src="img/k2.png" class="size_img2" />
+                        <img src="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-31.jpg" class="size_img2" />
 
 
                     </div>
@@ -216,7 +216,7 @@
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center">
-                        <img src="img/k3.png" class="size_img2" />
+                        <img src="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-29.jpg" class="size_img2" />
 
 
                     </div>
@@ -224,7 +224,7 @@
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center">
-                        <img src="img/k4.png" class="size_img2" />
+                        <img src="img/Mr-Nishanth_final-designs-PPT.jpg (1)/27e0c256b6e048e78f4d1f327484bba9BAcRR4CKKUIsmeTM-17.jpg" class="size_img2" />
 
 
                     </div>
@@ -232,7 +232,7 @@
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center">
-                        <img src="img/k5.jpg" class="size_img2" />
+                        <img src="img/Mr-Nishanth_final-designs-PPT.jpg (1)/27e0c256b6e048e78f4d1f327484bba9BAcRR4CKKUIsmeTM-15.jpg" class="size_img2" />
 
 
                     </div>
@@ -240,7 +240,7 @@
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center">
-                        <img src="img/k6.png" class="size_img2" />
+                        <img src="img/Mr-Nishanth_final-designs-PPT.jpg (1)/27e0c256b6e048e78f4d1f327484bba9BAcRR4CKKUIsmeTM-14.jpg" class="size_img2" />
 
 
                     </div>
