--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/ab1.png" alt="">
-                        <img class="img-fluid" src="img/ab2.png" alt="">
+                        <img class="img-fluid" src="img/AnyConv.com__IMG_6747.jpg" alt="">
+                        <img class="img-fluid" src="img/AnyConv.com__IMG_6723.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
