--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item d-flex position-relative text-center h-100">
                         <img class="bg-img" src="img/drag1.png" alt="">
@@ -332,9 +333,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+
+                <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/space1.png" alt="">
+                        <img class="bg-img" src="img/live1.png" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/interior-design-services.webp" alt="Icon">
                             <h3 class="mb-3">Space Saving Furniture</h3>
@@ -344,10 +346,26 @@
                                     class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
+                </div> -->
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="service-item d-flex position-relative text-center h-100">
+                        <img class="bg-img" src="img/live1.png" alt="">
+                        <div class="service-text p-5">
+                            <img class="mb-4" src="img/interior-design-services.webp" alt="Icon">
+                            <h3 class="mb-3">
+                                Space Saving Furniture</h3>
+                            <p class="mb-4">False Ceiling, Wall Panelling, Decor Accents, Lighting, Furnishing,
+                                <br/>Appliances</p>
+                            <a class="btn" href="space-saving-furniture.html"><i class="fa fa-plus text-primary me-3"></i>Read
+                                More</a>
+                        </div>
+                    </div>
                 </div>
+
+
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="" alt="img/top1.png">
+                        <img class="bg-img" src="img/1.png" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/home-improvement-services.webp" alt="Icon">
                             <h3 class="mb-3">Home Improvement Services</h3>
