--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/l5.JPEG"
+                                        <img class="position-absolute img-fluid w-100 h-100" src="img/new/A42.jpg"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
