--- a/about.html
+++ b/about.html
@@ -124,8 +124,8 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/about-3.png" alt="">
-                        <img class="img-fluid" src="img/about-4.png" alt="">
+                        <img class="img-fluid" src="img/new/A44.jpg" alt="">
+                        <img class="img-fluid" src="img/new/A40.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
@@ -264,8 +264,8 @@
             </div>
             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="feature-img">
-                    <img class="img-fluid" src="img/s5.png" alt="">
-                    <img class="img-fluid" src="img/s7.png" alt="">
+                    <img class="img-fluid" src="img/new/A1.jpg" alt="">
+                    <img class="img-fluid" src="img/new/A4.jpg" alt="">
                 </div>
             </div>
         </div>
