--- a/modular-kitchen.html
+++ b/modular-kitchen.html
@@ -180,8 +180,8 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="feature-img" style="height: 800px !important;">
-                        <img class="img-fluid" src="img/k5.jpg" alt="">
-                        <img class="img-fluid" src="img/k4.png" alt="">
+                        <img class="img-fluid" src="img/new/A1.jpg" alt="">
+                        <img class="img-fluid" src="img/new/A13.jpg" alt="">
                     </div>
                 </div>
             </div>
