--- a/wardrobe.html
+++ b/wardrobe.html
@@ -254,8 +254,8 @@
           </div>
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="feature-img" style="height: 800px !important">
-              <img class="img-fluid" src="img/carousel-2.jpg" alt="" />
-              <img class="img-fluid" src="img/b3.png" alt="" />
+              <img class="img-fluid" src="img/new/A2.jpg" alt="" />
+              <img class="img-fluid" src="img/new/A27.jpg" alt="" />
             </div>
           </div>
         </div>
