--- a/space-saving-furniture.html
+++ b/space-saving-furniture.html
@@ -175,8 +175,8 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="feature-img" style="height: 800px !important;">
-                        <img class="img-fluid" src="img/ss4.png" alt="">
-                        <img class="img-fluid" src="img/ss10.webp" alt="">
+                        <img class="img-fluid" src="img/new/A20.jpg" alt="">
+                        <img class="img-fluid" src="img/new/A15.jpg" alt="">
                     </div>
                 </div>
             </div>
